--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,56 @@
   text-align: center;
   max-width: 100vw;
 }
+.sectionContainer {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
+  padding: 50px 0;
+  text-align: center;
+  
+}
+
+.sectionTitle {
+  font-size: 2.5em;
+  color: #f2f2f2;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.sectionDescription {
+  font-size: 1.25em;
+  color: #d1d1d1;
+  line-height: 1.5;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.tabContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.tab {
+  padding: 10px 20px;
+  margin: 0 10px;
+  font-size: 1em;
+  color: #444;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.tab:hover {
+  background-color: #f9f9f9;
+}
+
+.tab.active {
+  color: #fff;
+  background-color: #0d0d0d;
+}
+
 
 .content {
   max-width: 1204px;
